Initial commit with .gitignore

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Pacifico&family=Poppins&family=Rowdies:wght@300;400;700&family=Staatliches&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import "tailwindcss";
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 
 :root {
   --background: #ffffff;
